ctm-sf-homeloan-app/main/default/objects/LoanApplicantLiability__c/LoanApplicantLiability__c.object-meta.xml
<CustomObject>
    <label>Loan Applicant Liability</label>
    <nameField>
        <label>Loan Applicant Liability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applicant Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>