ctm-sf-homeloan-app/main/default/objects/LoanApplicantLiability__c/fields/BId__c.field-meta.xml
<CustomField>
    <fullName>BId__c</fullName>
    <formula>LoanApplicationLiability__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BId</label>
    <type>Text</type>
</CustomField>