ctm-sf-homeloan-app/main/default/objects/LoanApplicantLiability__c/fields/LoanApplicant__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicant__c</fullName>
    <label>Loan Applicant</label>
    <referenceTo>LoanApplicant__c</referenceTo>
    <relationshipLabel>Loan Applicant Liabilities</relationshipLabel>
    <relationshipName>Loan_Applicant_Liabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>