ctm-sf-homeloan-app/main/default/objects/LoanApplicantLiability__c/fields/LoanApplicationLiability__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicationLiability__c</fullName>
    <label>Loan Application Liability</label>
    <referenceTo>LoanApplicationLiability__c</referenceTo>
    <relationshipLabel>Loan Applicant Liabilities</relationshipLabel>
    <relationshipName>Loan_Applicant_Liabilities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>