ctm-sf-homeloan-app/main/default/objects/LoanApplicantLiability__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>LoanApplicant__r.Name+&apos; &apos;+TEXT( Percentage__c * 100)+&apos;%&apos;</formula>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>