ctm-sf-homeloan-app/main/default/objects/LoanApplicantLiability__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <description>Lookup to Loan Application Liability Reference Field</description>
    <formula>LoanApplicationLiability__r.ReferenceId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReferenceId</label>
    <type>Text</type>
</CustomField>