ctm-sf-homeloan-app/main/default/objects/LoanApplicantLiability__c/fields/ResidentialLoanApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLoanApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication__c</referenceTo>
    <relationshipLabel>Loan Applicant Liabilities</relationshipLabel>
    <relationshipName>Loan_Applicant_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>